[tool.poetry]
name = "rarible-marketplace-indexer"
version = "0.1.0"
description = "DipDup indexer for Rarible marketplaces orders in Tezos"
authors = ["Igor Sereda <sereda.igor.s@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.10"
dipdup = "^5.0.0"
pytezos = {git = "https://github.com/baking-bad/pytezos.git", branch = "master"}

aiokafka = "^0.7.2"

[tool.poetry.group.dev.dependencies]
ssort = "^0.11.5"
mypy = "^0.942"
isort = "^5.10.1"
flakeheaven = "^0.11.1"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 140
force_single_line = true
group_by_package = true
ensure_newline_before_comments = true

[tool.black]
line-length = 140
target-version = ['py310']
skip-string-normalization = true

[tool.flakehell]
format = "colored"
max_line_length = 140
show_source = true
extended_default_ignore = []

[tool.flakehell.plugins]
pyflakes = ["+*"]
flake8-docstrings = ["-*"]
flake8-simplify = ["-SIM106"]
